--- a/ConsoleBT/ConsoleBT.vcxproj
+++ b/ConsoleBT/ConsoleBT.vcxproj
@@ -128,10 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BT1_Total1ToN.cpp" />
+    <ClCompile Include="BT2_UperAndLowerChar.cpp" />
     <ClCompile Include="ConsoleBT.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BT1_Total1ToN.h" />
+    <ClInclude Include="BT2_UperAndLowerChar.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
