--- a/ConsoleBT/ConsoleBT.vcxproj.filters
+++ b/ConsoleBT/ConsoleBT.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="BT2_UperAndLowerChar.cpp">
       <Filter>Source Files\Excersite</Filter>
     </ClCompile>
+    <ClCompile Include="BT3_TotalFactorial.cpp">
+      <Filter>Source Files\Excersite</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BT2_UperAndLowerChar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BT3_TotalFactorial.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
